# Idchain-pallet

./: .gitignore  Cargo.toml  README.md  header.txt  state.sh
bak/node/evm/: Cargo.toml
bak/node/evm/res/: solo.json  solo.raw.json
bak/node/evm/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  main.rs  service.rs
bak/node/evm/src/rpc/: mod.rs
bak/runtime/evm/: Cargo.toml  build.rs
bak/runtime/evm/src/: lib.rs  precompiles.rs
bak/runtime/evm/src/weights/: mod.rs  pallet_balances.rs
chainspecs/parachain-mainnet/: parachain-mainnet.json
chainspecs/parachain-testnet/: parachain-testnet-paseo.json
chainspecs/parachain-testnet-stg/: parachain-testnet-stg.json  peregrine-stg-relay.json
chainspecs/standalone/: standalone-testnet.json
crates/kilt-dip-primitives/: Cargo.toml
crates/kilt-dip-primitives/src/: utils.rs
crates/kilt-dip-primitives/src/merkle_proofs/v0/: input_common.rs  output_common.rs
crates/kilt-dip-primitives/src/merkle_proofs/v0/dip_subject_state/: mod.rs  tests.rs
crates/kilt-dip-primitives/src/merkle_proofs/v0/provider_state/: tests.rs
crates/kilt-dip-primitives/src/merkle_proofs/v0/relay_state/: tests.rs
crates/kilt-dip-primitives/src/verifier/parachain/: mod.rs
crates/kilt-dip-primitives/src/verifier/parachain/v0/: mock.rs  mod.rs
crates/kilt-dip-primitives/src/verifier/relaychain/: mod.rs
crates/kilt-dip-primitives/src/verifier/relaychain/v0/: mod.rs
dip-template/runtimes/dip-consumer/: Cargo.toml
dip-template/runtimes/dip-consumer/src/: dip.rs
dip-template/runtimes/dip-provider/: Cargo.toml
dip-template/runtimes/dip-provider/src/: dip.rs  lib.rs
dip-template/runtimes/dip-provider/src/weights/: did.rs
nodes/parachain/: Cargo.toml
nodes/parachain/src/: command.rs  service.rs
nodes/parachain/src/chain_spec/: mod.rs  utils.rs
nodes/parachain/src/chain_spec/mainnet/: dev.rs  mod.rs  new.rs
nodes/parachain/src/chain_spec/standalone/: mod.rs  new.rs
nodes/parachain/src/chain_spec/testnet/: dev.rs  mod.rs  new.rs
nodes/standalone/: Cargo.toml
nodes/standalone/src/: chain_spec.rs  command.rs  service.rs
pallets/delegation/: Cargo.toml
pallets/delegation/src/: access_control.rs  benchmarking.rs  lib.rs  mock.rs
pallets/pallet-dip-provider/: Cargo.toml
pallets/pallet-dip-provider/src/: traits.rs
pallets/pallet-migration/: Cargo.toml
pallets/pallet-migration/src/: benchmarking.rs  lib.rs  mock.rs  test.rs
pallets/public-credentials/: Cargo.toml
pallets/public-credentials/src/: credentials.rs  lib.rs  mock.rs
pallets/uid-core/: Cargo.toml
pallets/uid-core/src/: did_details.rs  lib.rs  mock.rs
pallets/uid-core/src/tests/: dispatch_as.rs  manage_keys.rs
pallets/uid-credential/: Cargo.toml
pallets/verification/: Cargo.toml
pallets/verification/src/: access_control.rs  benchmarking.rs  default_weights.rs  lib.rs  migrations.rs  mock.rs  try_state.rs  verifications.rs
pallets/verification/src/tests/: claim.rs  delete.rs  deposit.rs  revoke.rs
precompiles/call-permit/: CallPermit.sol  Cargo.toml
precompiles/call-permit/src/: lib.rs  mock.rs
runtime-api/did/: Cargo.toml
runtime-api/did/src/: did_details.rs  service_endpoint.rs
runtimes/common/: Cargo.toml
runtimes/common/src/: authorization.rs  constants.rs
runtimes/common/src/dip/: mock.rs
runtimes/common/src/dip/did/: mod.rs
runtimes/common/src/dip/did/tests/: retrieve.rs
runtimes/common/src/dip/merkle/: mod.rs
runtimes/common/src/dip/merkle/tests/: generate_commitment.rs  generate_proof.rs
runtimes/common/src/dip/merkle/v0/: mod.rs
runtimes/common/src/dip/merkle/v0/tests/: generate_commitment.rs  generate_proof.rs
runtimes/parachain-mainnet/: Cargo.toml
runtimes/parachain-mainnet/src/: lib.rs  tests.rs  xcm_config.rs
runtimes/parachain-mainnet/src/dip/: mod.rs
runtimes/parachain-mainnet/src/weights/: ctype.rs  cumulus_pallet_dmp_queue.rs  cumulus_pallet_parachain_system.rs  delegation.rs  did.rs  frame_system.rs  mod.rs  pallet_asset_switch.rs  pallet_assets.rs  pallet_balances.rs  pallet_collective_council.rs  pallet_collective_technical_committee.rs  pallet_democracy.rs  pallet_deposit_storage.rs  pallet_did_lookup.rs  pallet_dip_provider.rs  pallet_indices.rs  pallet_inflation.rs  pallet_membership.rs  pallet_message_queue.rs  pallet_migration.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_tips.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs  pallet_web3_names.rs  pallet_xcm.rs  parachain_staking.rs  public_credentials.rs  rocksdb_weights.rs  verification.rs
runtimes/parachain-testnet/: Cargo.toml
runtimes/parachain-testnet/src/: lib.rs  tests.rs  xcm_config.rs
runtimes/parachain-testnet/src/dip/: runtime_api.rs
runtimes/parachain-testnet/src/weights/: ctype.rs  cumulus_pallet_dmp_queue.rs  cumulus_pallet_parachain_system.rs  delegation.rs  did.rs  frame_system.rs  mod.rs  pallet_asset_switch.rs  pallet_assets.rs  pallet_balances.rs  pallet_collective_council.rs  pallet_collective_technical_committee.rs  pallet_democracy.rs  pallet_deposit_storage.rs  pallet_did_lookup.rs  pallet_dip_provider.rs  pallet_indices.rs  pallet_inflation.rs  pallet_membership.rs  pallet_message_queue.rs  pallet_migration.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_sudo.rs  pallet_timestamp.rs  pallet_tips.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs  pallet_web3_names.rs  pallet_xcm.rs  parachain_staking.rs  public_credentials.rs  rocksdb_weights.rs  verification.rs
runtimes/standalone/: Cargo.toml
runtimes/standalone/src/: lib.rs
scripts/localnet/: 1-validator.sh  2-validator.sh  3-validator.sh  4-validator.sh  README.md  archive-1.sh  archive-2.sh  archive-3.sh
scripts/zombienet/: config.toml  download-zombienet.sh  plain-idchain-chainspec.json
ts-ethers-test/: package.json  pnpm-lock.yaml
ts-ethers-test/src/: main.ts
