[package]
authors       = { workspace = true }
description   = "Pallet for lazy migration"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license-file  = { workspace = true }
name          = "pallet-migration"
readme        = { workspace = true }
repository    = { workspace = true }
version       = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
verification        = { workspace = true, features = ["mock"] }
uid-credential      = { workspace = true, features = ["mock"] }
delegation         = { workspace = true, features = ["mock"] }
uid-core           = { workspace = true, features = ["mock"] }
env_logger         = { workspace = true }
frame-benchmarking = { workspace = true, features = ["std"] }
kilt-support       = { workspace = true, features = ["mock", "try-runtime"] }
pallet-aura        = { workspace = true, features = ["std"] }
pallet-session     = { workspace = true, features = ["std"] }
pallet-timestamp   = { workspace = true, features = ["std"] }
public-credentials = { workspace = true, features = ["mock"] }
sp-consensus-aura  = { workspace = true, features = ["std"] }
sp-keystore        = { workspace = true, features = ["std"] }

[dependencies]
# Internal dependencies
verification        = { workspace = true }
delegation         = { workspace = true }
uid-core           = { workspace = true }
kilt-support       = { workspace = true }
pallet-did-lookup  = { workspace = true }
pallet-web3-names  = { workspace = true }
public-credentials = { workspace = true }
runtime-common     = { workspace = true }

uid-credential = { workspace = true, optional = true }

# Substrate dependencies
frame-support      = { workspace = true }
frame-system       = { workspace = true }
pallet-balances    = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }
sp-core            = { workspace = true }
sp-io              = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

# Benchmarking dependencies
frame-benchmarking = { workspace = true, optional = true }
sp-keystore        = { workspace = true, optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "verification/runtime-benchmarks",
  "uid-credential/runtime-benchmarks",
  "delegation/runtime-benchmarks",
  "uid-core/runtime-benchmarks",
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-did-lookup/runtime-benchmarks",
  "pallet-web3-names/runtime-benchmarks",
  "public-credentials/runtime-benchmarks",
  "runtime-common/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]

std = [
  "verification/std",
  "uid-credential/std",
  "delegation/std",
  "uid-core/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-did-lookup/std",
  "pallet-web3-names/std",
  "parity-scale-codec/std",
  "public-credentials/std",
  "runtime-common/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]

try-runtime = [
  "verification/try-runtime",
  "uid-credential/try-runtime",
  "delegation/try-runtime",
  "uid-core/try-runtime",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-did-lookup/try-runtime",
  "pallet-web3-names/try-runtime",
  "public-credentials/try-runtime",
  "runtime-common/try-runtime",
]
