[package]
name = "pallet-evm-precompile-call-permit"
authors = { workspace = true }
description = "A Precompile to dispatch a call with a ERC712 permit."
edition = "2021"
version = "0.1.0"

[dependencies]
log = { workspace = true }
num_enum = { workspace = true }
paste = { workspace = true }
slices = { workspace = true }

# Moonbeam
precompile-utils = { workspace = true, default-features = false }

# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
scale-codec = { workspace = true, features = [
    "max-encoded-len",
], default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Frontier
evm = { workspace = true, features = ["with-codec"], default-features = false }
fp-evm = { workspace = true, default-features = false }
pallet-evm = { workspace = true, features = [
    "forbid-evm-reentrancy",
], default-features = false }

[dev-dependencies]
# comments for now as some of this leaks std

# derive_more = { workspace = true }
# hex-literal = { workspace = true }
# libsecp256k1 = { workspace = true }
# serde = { workspace = true }
# sha3 = { workspace = true }

# pallet-balances = { workspace = true, features = [
#     "insecure_zero_ed",
#     "std",
# ], default-features = false }
# pallet-timestamp = { workspace = true, features = [
#     "std",
# ], default-features = false }
# precompile-utils = { workspace = true, features = [
#     "std",
#     "testing",
# ], default-features = false }
# scale-info = { workspace = true, features = ["derive", "std"] }
# sp-runtime = { workspace = true, features = ["std"], default-features = false }

[features]
default = ["std"]
std = [
    "evm/std",
    "fp-evm/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-evm/std",
    "scale-codec/std",
    "precompile-utils/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "pallet-timestamp/std",
]
